# llm-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_enhancement.yml
.github/workflows/: check-docs.yml  docs.yml  tests.yml
configs/: bert-base.py  bert-large-lamb.py  bert-large-uncased-pretraining.py  roberta.py
configs/bert-base/: adam.py
configs/bert-large/: nvidia-lamb.py
docs/: known-issues.md
docs/api/: cli.md
docs/contributing/: index.md  issues-pull-requests.md
docs/css/: extra.css
docs/guides/: bert-pretraining.md  gpt-pretraining.md  index.md  roberta-preprocessing.md
docs/installation/: index.md  polaris.md
docs/templates/python/material/: module.html.jinja
guides/: bert-pretraining.md  polaris-install.md  roberta-preprocessing.md
latest/api/checkpoint/: index.html
latest/api/config/: index.html
latest/api/datasets/: index.html
latest/api/datasets/bert/: index.html
latest/api/datasets/roberta/: index.html
latest/api/datasets/sharded/: index.html
latest/api/engine/: index.html
latest/api/engine/accumulation/: index.html
latest/api/engine/amp/: index.html
latest/api/engine/base/: index.html
latest/api/engine/initialize/: index.html
latest/api/environment/: index.html
latest/api/initialize/: index.html
latest/api/kfac/: index.html
latest/api/loss/: index.html
latest/api/models/: index.html
latest/api/models/bert/: index.html
latest/api/optimizers/: index.html
latest/api/preprocess/: index.html
latest/api/preprocess/download/: index.html
latest/api/preprocess/format/: index.html
latest/api/preprocess/roberta/: index.html
latest/api/preprocess/shard/: index.html
latest/api/preprocess/tokenize/: index.html
latest/api/preprocess/tokenizer/: index.html
latest/api/preprocess/utils/: index.html
latest/api/preprocess/vocab/: index.html
latest/api/schedulers/: index.html
latest/api/trainers/: index.html
latest/api/trainers/bert/: index.html
latest/api/trainers/bert/convert/: index.html
latest/api/trainers/bert/data/: index.html
latest/api/trainers/bert/main/: index.html
latest/api/trainers/bert/utils/: index.html
latest/api/trainers/gpt/: index.html
latest/api/trainers/gpt/arguments/: index.html
latest/api/trainers/gpt/data/: index.html
latest/api/trainers/gpt/main/: index.html
latest/api/trainers/gpt/model/: index.html
latest/api/trainers/gpt/optimizer/: index.html
latest/guides/bert-pretraining/: index.html
latest/guides/gpt-pretraining/: index.html
latest/guides/roberta-preprocessing/: index.html
latest/installation/polaris/: index.html
llm/: __init__.py  checkpoint.py  config.py  environment.py  initialize.py  kfac.py  loss.py  optimizers.py  schedulers.py  timer.py  utils.py
llm/datasets/: bert.py  nvidia.py  roberta.py  sharded.py
llm/engine/: __init__.py  accumulation.py  amp.py  base.py  initialize.py
llm/models/: bert.py
llm/preprocess/: __init__.py  download.py  encode.py  format.py  roberta.py  shard.py  tokenize.py  tokenizer.py  utils.py  vocab.py
llm/trainers/: __init__.py  bert.py
llm/trainers/bert/: __init__.py  __main__.py  convert.py  data.py  main.py  utils.py
llm/trainers/gpt/: __init__.py  __main__.py  arguments.py  data.py  main.py  model.py  optimizer.py
main/: 404.html  generate_api.py  index.html  objects.inv  sitemap.xml
main/_templates/python/material/: module.html
main/api/: index.html
main/api/SUMMARY/: index.html
main/api/checkpoint/: index.html
main/api/cli/: index.html
main/api/config/: index.html
main/api/datasets/: index.html
main/api/datasets/bert/: index.html
main/api/datasets/roberta/: index.html
main/api/datasets/sharded/: index.html
main/api/engine/: index.html
main/api/engine/accumulation/: index.html
main/api/engine/amp/: index.html
main/api/engine/base/: index.html
main/api/engine/initialize/: index.html
main/api/environment/: index.html
main/api/initialize/: index.html
main/api/kfac/: index.html
main/api/loss/: index.html
main/api/models/: index.html
main/api/models/bert/: index.html
main/api/optimizers/: index.html
main/api/preprocess/: index.html
main/api/preprocess/download/: index.html
main/api/preprocess/format/: index.html
main/api/preprocess/roberta/: index.html
main/api/preprocess/shard/: index.html
main/api/preprocess/tokenize/: index.html
main/api/preprocess/tokenizer/: index.html
main/api/preprocess/utils/: index.html
main/api/preprocess/vocab/: index.html
main/api/schedulers/: index.html
main/api/timer/: index.html
main/api/trainers/: index.html
main/api/trainers/bert/: index.html
main/api/trainers/gpt/: index.html
main/api/utils/: index.html
main/contributing/: index.html
main/contributing/issues-pull-requests/: index.html
main/contributing/style-guide/: index.html
main/css/: mkdocstrings.css
main/guides/: index.html
main/guides/bert-pretraining/: index.html
main/guides/gpt-pretraining/: index.html
main/guides/roberta-preprocessing/: index.html
main/installation/: index.html
main/installation/polaris/: index.html
main/known-issues/: index.html
main/search/: search_index.json
testing/: mock.py
testing/datasets/: bert.py  roberta.py
testing/preprocess/: roberta.py  text.py
tests/: checkpoint_test.py  config_test.py  empty_test.py  environment_test.py  initialize_test.py  kfac_test.py  loss_test.py  optimizers_test.py  schedulers_test.py  timer_test.py  utils_test.py
tests/datasets/: bert_test.py  nvidia_test.py  roberta_test.py  sharded_test.py
tests/engine/: accumulation_test.py  amp_test.py  base_test.py  initialize_test.py
tests/models/: bert_test.py
tests/preprocess/: download_test.py  encode_test.py  format_test.py  roberta_test.py  shard_test.py  tokenize_test.py  tokenizer_test.py  utils_test.py  vocab_test.py
tests/trainers/: bert_test.py
tests/trainers/bert/: convert_test.py  data_test.py  main_test.py  utils_test.py
(+9 files in other folders)
