[metadata]
name = llm
version = 0.0.1
description = Training code for large language models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpauloski/llm-colossal-ai
author = Greg Pauloski
author_email = jgpauloski@uchicago.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*

[options.package_data]
* = py.typed

[bdist_wheel]
universal = True

[codespell]
skip =
    .git,
    .github,
    __pycache__,
    build,
    dist,
    .*egg-info,

[coverage:run]
plugins = covdefaults
omit = examples

[flake8]
docstring-convention = google
ignore = D10, W503
per-file-ignores =
    */__init__.py: F401
    */*_test.py: D10
exclude =
    .git,
    .github,
    __pycache__,
    build,
    dist,
    .*egg-info,
    setup.py,
    docs,
    examples/*,
    venv

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-testing.*]
allow_incomplete_defs = true
allow_untyped_defs = true

[mypy-tests.*]
allow_incomplete_defs = true
allow_untyped_defs = true

[tool:pytest]
filterwarnings =
    ignore::UserWarning:torch
